--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -24,3 +24,10 @@ statsPoints=Punkte
 statsCards=Karten
 statsFunds=Verm\u00F6gen
 statsGroups=Gruppen
+clearFunds=Zur\u00FCcksetzen
+clearFundsDesc=Setzt die Vermögensangaben auf 0.
+askClearFunds=Alle Vermögensangaben werden gelöscht.
+on=Ein
+off=Aus
+enableFunds=Verm\u00F6gen ber\u00FCcksichtigen
+disableFunds=Verm\u00F6gen nicht ber\u00FCcksichtigen
