--- a/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
@@ -4,3 +4,4 @@
 prereqFailed = ''{0}'' erforderlich
 discouraged = Am Ende w\u00FCrden {0,number} Punkte fehlen.
 discouraged[one] = Am Ende w\u00FCrde 1 Punkt fehlen.
+gamesAskDelete = Partie ''{0}''\nf\u00FCr immer l\u00F6schen?
