--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -25,9 +25,21 @@ statsCards=Karten
 statsFunds=Verm\u00F6gen
 statsGroups=Gruppen
 clearFunds=Zur\u00FCcksetzen
-clearFundsDesc=Setzt die Vermögensangaben auf 0.
-askClearFunds=Alle Vermögensangaben werden gelöscht.
+clearFundsDesc=Setzt die Verm\u00F6gensangaben auf 0.
+askClearFunds=Alle Verm\u00F6gensangaben werden gelöscht.
 on=Ein
 off=Aus
 enableFunds=Verm\u00F6gen ber\u00FCcksichtigen
 disableFunds=Verm\u00F6gen nicht ber\u00FCcksichtigen
+rules=Variante
+emptyGamesListMsg=Partie starten mit 'Neu'.
+gamesViewTitle=Partien
+gamesBtnNew=Neu
+gamesBtnNewTip=Neue Partie eintragen
+gamesBtnRename=Umbenennen
+gamesBtnRenameTip=Partie umbenennen
+gamesBtnDelete=L\u00F6schen
+gamesBtnDeleteTip=Alte Partie l\u00F6schen
+gamesChoseTip=Diese Partie ausw\u00E4hlen
+gamesAskRename=Neuer Name f\u00FCr die Partie\:
+gamesAskNewName=Name f\u00FCr die neue Partie\:
