9 new constants, 1 changed

--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -5,7 +5,7 @@ civCards=Zivilisationskarten
 funds=Verm\u00F6gen
 treasury=Staatsschatz
 cardDetails=Details zur Karte
-changeUser=< Spieler
+changeUser=&lt;&nbsp;Spieler
 revise=Korrigieren
 reviseDone=Okay
 commit=Kaufen
@@ -43,3 +43,12 @@ gamesBtnDeleteTip=Alte Partie l\u00F6schen
 gamesChoseTip=Diese Partie ausw\u00E4hlen
 gamesAskRename=Neuer Name f\u00FCr die Partie\:
 gamesAskNewName=Name f\u00FCr die neue Partie\:
+fundsBonus=Bonus
+fundsBonusTitle=Beliebige Punktzahl, die zu Ihrem Verm\u00F6gen addiert wird
+fundsDetailed=Detaillert:
+fundsTotalLabel=Gesamtverm\u00F6gen
+fundsCommodities=Handelskarten
+noGame=Kein Spiel ausgew\u00E4hlt
+error=Fehler:
+notice=Information
+unknown=unbekannt
