moved discouraged from messages to constants

--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -52,3 +52,4 @@ noGame=Kein Spiel ausgew\u00E4hlt
 error=Fehler:
 notice=Information
 unknown=unbekannt
+discouraged=Das Punkteziel w\u00FCrde verfehlt.
