4 new constants, 1 changed

--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -45,11 +45,15 @@ gamesAskRename=Neuer Name f\u00FCr die Partie\:
 gamesAskNewName=Name f\u00FCr die neue Partie\:
 fundsBonus=Bonus
 fundsBonusTitle=Beliebige Punktzahl, die zu Ihrem Verm\u00F6gen addiert wird
-fundsDetailed=Detaillert:
+fundsDetailed=Detailliert:
 fundsTotalLabel=Gesamtverm\u00F6gen
 fundsCommodities=Handelskarten
 noGame=Kein Spiel ausgew\u00E4hlt
 error=Fehler:
 notice=Information
 unknown=unbekannt
-discouraged=Das Punkteziel w\u00FCrde verfehlt.
+cardsDiscouraged=Das Punkteziel w\u00FCrde verfehlt.
+cardsViewTitle=Karten
+cardsBtnFunds=Verm\u00F6gen ver\u00E4ndern
+playersDlgTitleAdd=Neuer Spieler
+playersDlgTitleEdit=Spieler \u00E4ndern
