--- a/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
@@ -3,3 +3,5 @@
 # UTF-8 upon loading the property file (which GWT does not), they are read as ISO! 
 prereqFailed = ''{0}'' erforderlich
 gamesAskDelete = Partie ''{0}''\nf\u00FCr immer l\u00F6schen?
+playersDlgAddError = Kann ''{0}'' nicht hinzuf\u00FCgen.
+playersDlgEditError = Kann nicht in ''{0}'' umbenennen.
