--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -54,6 +54,6 @@ notice=Information
 unknown=unbekannt
 cardsDiscouraged=Das Punkteziel w\u00FCrde verfehlt.
 cardsViewTitle=Karten
-cardsBtnFunds=Verm\u00F6gen ver\u00E4ndern
+cardsBtnFundsTip=Verm\u00F6gen ver\u00E4ndern
 playersDlgTitleAdd=Neuer Spieler
 playersDlgTitleEdit=Spieler \u00E4ndern
