--- a/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
@@ -5,3 +5,4 @@ prereqFailed = ''{0}'' erforderlich
 gamesAskDelete = Partie ''{0}''\nf\u00FCr immer l\u00F6schen?
 playersDlgAddError = Kann ''{0}'' nicht hinzuf\u00FCgen.
 playersDlgEditError = Kann nicht in ''{0}'' umbenennen.
+gameCorruptNoVariant = Die Partie ''{0}''\nist defekt, weil sie auf einer nicht\nexistierenden Variante basiert.\nPartie wird gel\u00F6scht.
