--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -57,3 +57,5 @@ cardsViewTitle=Karten
 cardsBtnFundsTip=Verm\u00F6gen ver\u00E4ndern
 playersDlgTitleAdd=Neuer Spieler
 playersDlgTitleEdit=Spieler \u00E4ndern
+fundsBtnBackHtml=&lt;&nbsp;Karten
+fundsBtnBackTitle=Zur\u00FCck zu den Zivilisationskarten
