--- a/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
@@ -6,3 +6,4 @@ gamesAskDelete = Partie ''{0}''\nf\u00FCr immer l\u00F6schen?
 playersDlgAddError = Kann ''{0}'' nicht hinzuf\u00FCgen.
 playersDlgEditError = Kann nicht in ''{0}'' umbenennen.
 gameCorruptNoVariant = Die Partie ''{0}''\nist defekt, weil sie auf einer nicht\nexistierenden Variante basiert.\nPartie wird gel\u00F6scht.
+cardsDiscouraged=Das Punkteziel w\u00FCrde um {0} Punkte verfehlt.
