--- a/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
@@ -7,3 +7,10 @@ playersDlgAddError = Kann ''{0}'' nicht hinzuf\u00FCgen.
 playersDlgEditError = Kann nicht in ''{0}'' umbenennen.
 gameCorruptNoVariant = Die Partie ''{0}''\nist defekt, weil sie auf einer nicht\nexistierenden Variante basiert.\nPartie wird gel\u00F6scht.
 cardsDiscouraged=Das Punkteziel w\u00FCrde um {0} Punkte verfehlt.
+
+#state.detail.Owned is defined in CbLocalizedConstantsIF_de.properties
+#state.detail.Planned is defined in CbLocalizedConstantsIF_de.properties
+#state.detail.Absent is defined in CbLocalizedConstantsIF_de.properties
+#state.detail.Unaffordable is defined in CbLocalizedConstantsIF_de.properties
+state.detail.PrereqFailed=Um diese Karte erwerben zu k\u00F6nnen, m\u00FCssen Sie zun\u00E4chst die Karte ''{0}'' erwerben.
+state.detail.DiscouragedBuy=Falls Sie diese Karten erwerben, werden Sie das Punkte-Ziel mit Zivilisationskarten um {0} Punkte verfehlen.
