--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -58,3 +58,10 @@ playersDlgTitleAdd=Neuer Spieler
 playersDlgTitleEdit=Spieler \u00E4ndern
 fundsBtnBackHtml=&lt;&nbsp;Karten
 fundsBtnBackTitle=Zur\u00FCck zu den Zivilisationskarten
+
+state.detail.Owned=Diese Karte ist in Ihrem Besitz.
+state.detail.Planned=Sie planen den Erwerb dieser Karte.
+state.detail.Absent=Diese Karte ist momentan nicht in Ihrem Besitz.
+state.detail.Unaffordable=Diese Karte ist momentan zu teuer.
+#state.detail.PrereqFailed is defined in CbLocalizedMessagesIF_de.properties
+#state.detail.DiscouragedBuy is defined in CbLocalizedMessagesIF_de.properties
