--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -59,9 +59,19 @@ playersDlgTitleEdit=Spieler \u00E4ndern
 fundsBtnBackHtml=&lt;&nbsp;Karten
 fundsBtnBackTitle=Zur\u00FCck zu den Zivilisationskarten
 
+# --- Karten-Zustände ---
 state.detail.Owned=Diese Karte ist in Ihrem Besitz.
 state.detail.Planned=Sie planen den Erwerb dieser Karte.
 state.detail.Absent=Diese Karte ist momentan nicht in Ihrem Besitz.
 state.detail.Unaffordable=Diese Karte ist momentan zu teuer.
 #state.detail.PrereqFailed is defined in CbLocalizedMessagesIF_de.properties
 #state.detail.DiscouragedBuy is defined in CbLocalizedMessagesIF_de.properties
+
+# --- 'Details' View ---
+view.detail.title=Details
+view.detail.sectionheading.supports=Unterst\u00FCtzt
+view.detail.sectionheading.credit=Boni
+view.detail.sectionheading.attributes=Eigenschaften
+view.detail.sectionheading.calamityEffects=Auswirkungen auf Katastrophen
+view.detail.button.back=&lt;&nbsp;Karten
+view.detail.button.back.title=Zur\u00FCck zu den Zivilisationskarten
