--- a/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
@@ -13,4 +13,4 @@ cardsDiscouraged=Das Punkteziel w\u00FCrde um {0} Punkte verfehlt.
 #state.detail.Absent is defined in CbLocalizedConstantsIF_de.properties
 #state.detail.Unaffordable is defined in CbLocalizedConstantsIF_de.properties
 state.detail.PrereqFailed=Um diese Karte erwerben zu k\u00F6nnen, m\u00FCssen Sie zun\u00E4chst die Karte ''{0}'' erwerben.
-state.detail.DiscouragedBuy=Falls Sie diese Karten erwerben, werden Sie das Punkte-Ziel mit Zivilisationskarten um {0} Punkte verfehlen.
+state.detail.DiscouragedBuy=Falls Sie diese Karte erwerben, werden Sie das Punkte-Ziel mit Zivilisationskarten um {0} Punkte verfehlen.
