three more 'Detail' view strings

--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -73,5 +73,8 @@ view.detail.sectionheading.supports=Unterst\u00FCtzt
 view.detail.sectionheading.credit=Boni
 view.detail.sectionheading.attributes=Eigenschaften
 view.detail.sectionheading.calamityEffects=Auswirkungen auf Katastrophen
+view.detail.message.supports.none=Keine
 view.detail.button.back=&lt;&nbsp;Karten
 view.detail.button.back.title=Zur\u00FCck zu den Zivilisationskarten
+view.detail.button.prev=Vorige
+view.detail.button.next=N\u00E4chste
