--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -32,13 +32,10 @@ off=Aus
 enableFunds=Verm\u00F6gen ber\u00FCcksichtigen
 disableFunds=Verm\u00F6gen nicht ber\u00FCcksichtigen
 rules=Variante
-emptyGamesListMsg=Partie starten mit 'Neu'.
+gamesEmptyListMsg=Neue Partie mit '+'.
 gamesViewTitle=Partien
-gamesBtnNew=Neu
 gamesBtnNewTip=Neue Partie eintragen
-gamesBtnRename=Umbenennen
 gamesBtnRenameTip=Partie umbenennen
-gamesBtnDelete=L\u00F6schen
 gamesBtnDeleteTip=Alte Partie l\u00F6schen
 gamesChoseTip=Diese Partie ausw\u00E4hlen
 gamesAskRename=Neuer Name f\u00FCr die Partie\:
