minor change to the games view icon button tooltips

--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -35,8 +35,8 @@ rules=Variante
 gamesEmptyListMsg=Neue Partie mit '+'.
 gamesViewTitle=Partien
 gamesBtnNewTip=Neue Partie eintragen
-gamesBtnRenameTip=Partie umbenennen
-gamesBtnDeleteTip=Alte Partie l\u00F6schen
+gamesBtnRenameTip=Ausgew\u00E4hlte Partie umbenennen
+gamesBtnDeleteTip=Ausgew\u00E4hlte Partie l\u00F6schen
 gamesChoseTip=Diese Partie ausw\u00E4hlen
 gamesAskRename=Neuer Name f\u00FCr die Partie\:
 gamesAskNewName=Name f\u00FCr die neue Partie\:
