Modified changeUser to be plain text instead of HTML

--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -5,7 +5,7 @@ civCards=Zivilisationskarten
 funds=Verm\u00F6gen
 treasury=Staatsschatz
 cardDetails=Details zur Karte
-changeUser=&lt;&nbsp;Spieler
+changeUser=Spieler
 revise=Korrigieren
 reviseDone=Okay
 commit=Kaufen
