changed some 'Funds' view stuff

--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -42,7 +42,7 @@ gamesAskRename=Neuer Name f\u00FCr die Partie\:
 gamesAskNewName=Name f\u00FCr die neue Partie\:
 fundsBonus=Bonus
 fundsBonusTitle=Beliebige Punktzahl, die zu Ihrem Verm\u00F6gen addiert wird
-fundsDetailed=Detailliert:
+fundsDetailed=Details erfassen
 fundsTotalLabel=Gesamtverm\u00F6gen
 fundsCommodities=Handelskarten
 noGame=Kein Spiel ausgew\u00E4hlt
@@ -53,7 +53,7 @@ cardsViewTitle=Karten
 cardsBtnFundsTip=Verm\u00F6gen ver\u00E4ndern
 playersDlgTitleAdd=Neuer Spieler
 playersDlgTitleEdit=Spieler \u00E4ndern
-fundsBtnBackHtml=&lt;&nbsp;Karten
+fundsBtnBack=Karten
 fundsBtnBackTitle=Zur\u00FCck zu den Zivilisationskarten
 
 # --- Karten-Zustände ---
