--- a/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
@@ -1,6 +1,7 @@
 # $Id$
 # Note that property files are by default ISO-8859-1. Unless the developer specifies
 # UTF-8 upon loading the property file (which GWT does not), they are read as ISO! 
+
 prereqFailed = ''{0}'' erforderlich
 gamesAskDelete = Partie ''{0}''\nf\u00FCr immer l\u00F6schen?
 playersDlgAddError = Kann ''{0}'' nicht hinzuf\u00FCgen.
@@ -14,3 +15,7 @@ cardsDiscouraged=Das Punkteziel w\u00FCrde um {0} Punkte verfehlt.
 #state.detail.Unaffordable is defined in CbLocalizedConstantsIF_de.properties
 state.detail.PrereqFailed=Um diese Karte erwerben zu k\u00F6nnen, m\u00FCssen Sie zun\u00E4chst die Karte ''{0}'' erwerben.
 state.detail.DiscouragedBuy=Falls Sie diese Karte erwerben, werden Sie das Punkte-Ziel mit Zivilisationskarten um {0} Punkte verfehlen.
+
+view.funds.commodity.option={0,number} ({1,number} Pkte.)
+view.funds.commodity.option[\=1]={0,number} ({1,number} Pkt.)
+view.funds.commodity.option[one]={0,number} ({1,number} Pkt.)
