--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -1,9 +1,9 @@
 # $Id$
 # Note that property files are by default ISO-8859-1. Unless the developer specifies
-# UTF-8 upon loading the property file (which GWT does not), they are read as ISO! 
+# UTF-8 upon loading the property file (which GWT does not), they are read as ISO!
+
 civCards=Zivilisationskarten
 funds=Verm\u00F6gen
-treasury=Staatsschatz
 cardDetails=Details zur Karte
 changeUser=Spieler
 revise=Korrigieren
@@ -24,13 +24,6 @@ statsPoints=Punkte
 statsCards=Karten
 statsFunds=Verm\u00F6gen
 statsGroups=Gruppen
-clearFunds=Zur\u00FCcksetzen
-clearFundsDesc=Setzt die Verm\u00F6gensangaben auf 0.
-askClearFunds=Alle Verm\u00F6gensangaben werden gelöscht.
-on=Ein
-off=Aus
-enableFunds=Verm\u00F6gen ber\u00FCcksichtigen
-disableFunds=Verm\u00F6gen nicht ber\u00FCcksichtigen
 rules=Variante
 gamesEmptyListMsg=Neue Partie mit '+'.
 gamesViewTitle=Partien
@@ -40,11 +33,6 @@ gamesBtnDeleteTip=Ausgew\u00E4hlte Partie l\u00F6schen
 gamesChoseTip=Diese Partie ausw\u00E4hlen
 gamesAskRename=Neuer Name f\u00FCr die Partie\:
 gamesAskNewName=Name f\u00FCr die neue Partie\:
-fundsBonus=Bonus
-fundsBonusTitle=Beliebige Punktzahl, die zu Ihrem Verm\u00F6gen addiert wird
-fundsDetailed=Details erfassen
-fundsTotalLabel=Gesamtverm\u00F6gen
-fundsCommodities=Handelskarten
 noGame=Kein Spiel ausgew\u00E4hlt
 error=Fehler:
 notice=Information
@@ -53,8 +41,6 @@ cardsViewTitle=Karten
 cardsBtnFundsTip=Verm\u00F6gen ver\u00E4ndern
 playersDlgTitleAdd=Neuer Spieler
 playersDlgTitleEdit=Spieler \u00E4ndern
-fundsBtnBack=Karten
-fundsBtnBackTitle=Zur\u00FCck zu den Zivilisationskarten
 
 # --- Karten-Zustände ---
 state.detail.Owned=Diese Karte ist in Ihrem Besitz.
@@ -63,6 +49,22 @@ state.detail.Absent=Diese Karte ist momentan nicht in Ihrem Besitz.
 state.detail.Unaffordable=Diese Karte ist momentan zu teuer.
 #state.detail.PrereqFailed is defined in CbLocalizedMessagesIF_de.properties
 #state.detail.DiscouragedBuy is defined in CbLocalizedMessagesIF_de.properties
+
+# --- 'Funds' View ---
+view.funds.checkbox.mainswitch=Verm\u00F6gen erfassen
+clearFunds=Zur\u00FCcksetzen
+clearFundsDesc=Setzt die Verm\u00F6gensangaben auf 0.
+askClearFunds=Alle Verm\u00F6gensangaben werden gelöscht.
+enableFunds=Verm\u00F6gen ber\u00FCcksichtigen
+disableFunds=Verm\u00F6gen nicht ber\u00FCcksichtigen
+treasury=Staatsschatz
+fundsBonus=Bonus
+fundsBonusTitle=Beliebige Punktzahl, die zu Ihrem Verm\u00F6gen addiert wird
+fundsDetailed=Details erfassen
+fundsTotalLabel=Gesamtverm\u00F6gen
+fundsCommodities=Handelskarten
+fundsBtnBack=Karten
+fundsBtnBackTitle=Zur\u00FCck zu den Zivilisationskarten
 
 # --- 'Details' View ---
 view.detail.title=Details
