--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -14,6 +14,7 @@ cancel=Abbrechen
 askClearPlans=Pl\u00E4ne werden zur\u00FCckgesetzt.
 btnTitleChangeUser=Zu einem anderen Spieler wechseln
 btnTitleRevise=Korrektur des Kartenbesitzes
+btnTitleReviseExit=Korrektur abschliessen
 btnTitleBuyCards=Geplante Karten kaufen
 askCommitBuy=Geplante Karten kaufen?
 noFunds=Unzureichendes Verm\u00F6gen
