consolidated cards view strings, removed some unused strings

--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -2,21 +2,8 @@
 # Note that property files are by default ISO-8859-1. Unless the developer specifies
 # UTF-8 upon loading the property file (which GWT does not), they are read as ISO!
 
-civCards=Zivilisationskarten
-funds=Verm\u00F6gen
-cardDetails=Details zur Karte
-changeUser=Spieler
-revise=Korrigieren
-reviseDone=Okay
-commit=Kaufen
 ok=Okay
 cancel=Abbrechen
-askClearPlans=Pl\u00E4ne werden zur\u00FCckgesetzt.
-btnTitleChangeUser=Zu einem anderen Spieler wechseln
-btnTitleRevise=Korrektur des Kartenbesitzes
-btnTitleReviseExit=Korrektur abschliessen
-btnTitleBuyCards=Geplante Karten kaufen
-askCommitBuy=Geplante Karten kaufen?
 noFunds=Unzureichendes Verm\u00F6gen
 askDiscouraged=Mit diesem Kauf k\u00F6nnen Sie durch<br/>Punkte aus Zivilisationskarten nicht<br/>mehr gewinnen.
 askUnaffordable=Diese Karte k\u00F6nnen Sie sich vermutlich<br/>nicht leisten.
@@ -38,8 +25,6 @@ noGame=Kein Spiel ausgew\u00E4hlt
 error=Fehler:
 notice=Information
 unknown=unbekannt
-cardsViewTitle=Karten
-cardsBtnFundsTip=Verm\u00F6gen ver\u00E4ndern
 playersDlgTitleAdd=Neuer Spieler
 playersDlgTitleEdit=Spieler \u00E4ndern
 
@@ -50,6 +35,20 @@ state.detail.Absent=Diese Karte ist momentan nicht in Ihrem Besitz.
 state.detail.Unaffordable=Diese Karte ist momentan zu teuer.
 #state.detail.PrereqFailed is defined in CbLocalizedMessagesIF_de.properties
 #state.detail.DiscouragedBuy is defined in CbLocalizedMessagesIF_de.properties
+
+# --- 'Cards' View ---
+view.cards.heading=Karten
+view.cards.button.back=Spieler
+view.cards.button.back.title=Zu einem anderen Spieler wechseln
+view.cards.button.forward=Verm\u00F6gen
+view.cards.button.forward.title=Verm\u00F6gen ver\u00E4ndern
+view.cards.details.title=Details zur Karte
+view.cards.button.revise.title=Korrektur des Kartenbesitzes
+view.cards.ask.clearplans=Pl\u00E4ne werden zur\u00FCckgesetzt.
+view.cards.msg.revising=Korrigieren ...
+view.cards.button.revisedone=Fertig
+view.cards.button.revisedone.title=Korrektur abschliessen
+view.cards.button.buy.title=Geplante Karten kaufen
 
 # --- 'Funds' View ---
 view.funds.checkbox.mainswitch=Verm\u00F6gen erfassen
@@ -68,7 +67,7 @@ fundsBtnBack=Karten
 fundsBtnBackTitle=Zur\u00FCck zu den Zivilisationskarten
 
 # --- 'Details' View ---
-view.detail.title=Details
+view.detail.heading=Details
 view.detail.sectionheading.supports=Unterst\u00FCtzt
 view.detail.sectionheading.credit=Boni
 view.detail.sectionheading.attributes=Eigenschaften
