move hard-coded group display names from CbGroup to CbLocalizedConstantsIF

--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -28,6 +28,13 @@ unknown=unbekannt
 playersDlgTitleAdd=Neuer Spieler
 playersDlgTitleEdit=Spieler \u00E4ndern
 
+# --- Namen der Kartengruppen ---
+group.C.name=Handwerk
+group.S.name=Wissenschaften
+group.A.name=K\u00FCnste
+group.G.name=Gesellschaft
+group.R.name=Religion
+
 # --- Karten-Zustände ---
 state.detail.Owned=Diese Karte ist in Ihrem Besitz.
 state.detail.Planned=Sie planen den Erwerb dieser Karte.
