cleanup of CbLocalizedConstantsIF

--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -10,17 +10,8 @@ askUnaffordable=Diese Karte k\u00F6nnen Sie sich vermutlich<br/>nicht leisten.
 askAreYouSure=Sind sie sicher?
 statsPoints=Punkte
 statsCards=Karten
-statsFunds=Verm\u00F6gen
 statsGroups=Gruppen
 rules=Variante
-gamesEmptyListMsg=Neue Partie mit '+'.
-gamesViewTitle=Partien
-gamesBtnNewTip=Neue Partie eintragen
-gamesBtnRenameTip=Ausgew\u00E4hlte Partie umbenennen
-gamesBtnDeleteTip=Ausgew\u00E4hlte Partie l\u00F6schen
-gamesChoseTip=Diese Partie ausw\u00E4hlen
-gamesAskRename=Neuer Name f\u00FCr die Partie\:
-gamesAskNewName=Name f\u00FCr die neue Partie\:
 noGame=Kein Spiel ausgew\u00E4hlt
 error=Fehler:
 notice=Information
@@ -43,12 +34,23 @@ state.detail.Unaffordable=Diese Karte ist momentan zu teuer.
 #state.detail.PrereqFailed is defined in CbLocalizedMessagesIF_de.properties
 #state.detail.DiscouragedBuy is defined in CbLocalizedMessagesIF_de.properties
 
+# --- 'Games' View ---
+view.games.headerhint=Partie ausw\u00E4hlen:
+view.games.button.new.title=Neue Partie eintragen
+view.games.button.rename.title=Ausgew\u00E4hlte Partie umbenennen
+view.games.button.delete.title=Ausgew\u00E4hlte Partie l\u00F6schen
+view.games.message.emptylist=Neue Partie mit '+'.
+view.games.choose.title=Partie ausw\u00E4hlen
+view.games.ask.rename=Neuer Name f\u00FCr die Partie\:
+view.games.ask.newname=Name f\u00FCr die neue Partie\:
+view.games.message.unknownvariant=Unbekannte Variante.\nKann Partie nicht anlegen.
+
 # --- 'Cards' View ---
 view.cards.heading=Karten
-view.cards.button.back=Spieler
-view.cards.button.back.title=Zu einem anderen Spieler wechseln
-view.cards.button.forward=Verm\u00F6gen
-view.cards.button.forward.title=Verm\u00F6gen ver\u00E4ndern
+view.cards.navbutton.back=Spieler
+view.cards.navbutton.back.title=Zu einem anderen Spieler wechseln
+view.cards.navbutton.forward=Verm\u00F6gen
+view.cards.navbutton.forward.title=Verm\u00F6gen ver\u00E4ndern
 view.cards.details.title=Details zur Karte
 view.cards.button.revise.title=Korrektur des Kartenbesitzes
 view.cards.ask.clearplans=Pl\u00E4ne werden zur\u00FCckgesetzt.
@@ -58,29 +60,26 @@ view.cards.button.revisedone.title=Korrektur abschliessen
 view.cards.button.buy.title=Geplante Karten kaufen
 
 # --- 'Funds' View ---
+view.funds.navbutton.back=Karten
+view.funds.navbutton.back.title=Zur\u00FCck zu den Zivilisationskarten
+view.funds.stats.totalfunds=Verm\u00F6gen
+view.funds.stats.commodities=Handelskarten
 view.funds.checkbox.mainswitch=Verm\u00F6gen erfassen
-clearFunds=Zur\u00FCcksetzen
-clearFundsDesc=Setzt die Verm\u00F6gensangaben auf 0.
-askClearFunds=Alle Verm\u00F6gensangaben werden gelöscht.
-enableFunds=Verm\u00F6gen ber\u00FCcksichtigen
-disableFunds=Verm\u00F6gen nicht ber\u00FCcksichtigen
-treasury=Staatsschatz
-fundsBonus=Bonus
-fundsBonusTitle=Beliebige Punktzahl, die zu Ihrem Verm\u00F6gen addiert wird
-fundsDetailed=Details erfassen
-fundsTotalLabel=Gesamtverm\u00F6gen
-fundsCommodities=Handelskarten
-fundsBtnBack=Karten
-fundsBtnBackTitle=Zur\u00FCck zu den Zivilisationskarten
+view.funds.checkbox.detailed=Details erfassen
+view.funds.input.treasury=Staatsschatz
+view.funds.input.bonus=Bonus
+view.funds.input.bonus.title=Beliebige Punktzahl, die zu Ihrem Verm\u00F6gen addiert wird
+view.funds.input.totalfunds=Gesamtverm\u00F6gen
+view.funds.button.clear.title=Setzt die Verm\u00F6gensangaben auf 0.
+view.funds.ask.clear=Alle Verm\u00F6gensangaben werden gel\u00F6scht.
 
 # --- 'Details' View ---
 view.detail.heading=Details
-view.detail.sectionheading.supports=Unterst\u00FCtzt
+view.detail.sectionheading.currentcost=Aktueller Preis
 view.detail.sectionheading.credit=Boni
 view.detail.sectionheading.attributes=Eigenschaften
 view.detail.sectionheading.calamityEffects=Auswirkungen auf Katastrophen
+view.detail.sectionheading.supports=Unterst\u00FCtzt
 view.detail.message.supports.none=Keine
-view.detail.button.back=Karten
-view.detail.button.back.title=Zur\u00FCck zu den Zivilisationskarten
 view.detail.button.prev=Vorige
 view.detail.button.next=N\u00E4chste
