--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -5,19 +5,12 @@
 ok=Okay
 cancel=Abbrechen
 noFunds=Unzureichendes Verm\u00F6gen
-askDiscouraged=Mit diesem Kauf k\u00F6nnen Sie durch<br/>Punkte aus Zivilisationskarten nicht<br/>mehr gewinnen.
-askUnaffordable=Diese Karte k\u00F6nnen Sie sich vermutlich<br/>nicht leisten.
 askAreYouSure=Sind sie sicher?
-statsPoints=Punkte
-statsCards=Karten
-statsGroups=Gruppen
 rules=Variante
 noGame=Kein Spiel ausgew\u00E4hlt
 error=Fehler:
 notice=Information
 unknown=unbekannt
-playersDlgTitleAdd=Neuer Spieler
-playersDlgTitleEdit=Spieler \u00E4ndern
 
 # --- Namen der Kartengruppen ---
 group.C.name=Handwerk
@@ -38,22 +31,40 @@ state.detail.Unaffordable=Diese Karte ist momentan zu teuer.
 view.games.headerhint=Partie ausw\u00E4hlen:
 view.games.button.new.title=Neue Partie eintragen
 view.games.button.rename.title=Ausgew\u00E4hlte Partie umbenennen
-view.games.button.delete.title=Ausgew\u00E4hlte Partie l\u00F6schen
+view.games.button.remove.title=Ausgew\u00E4hlte Partie entfernen
 view.games.message.emptylist=Neue Partie mit '+'.
 view.games.choose.title=Partie ausw\u00E4hlen
 view.games.ask.rename=Neuer Name f\u00FCr die Partie\:
 view.games.ask.newname=Name f\u00FCr die neue Partie\:
 view.games.message.unknownvariant=Unbekannte Variante.\nKann Partie nicht anlegen.
 
+# --- 'Players' View ---
+view.players.heading=Spieler
+view.players.headerhint=Spieler(in) ausw\u00E4hlen:
+view.players.navbutton.back=Partie
+view.players.navbutton.back.title=Partie wechseln
+view.players.button.new.title=Neue(n) Spieler(in) hinzuf\u00FCgen
+view.players.button.edit.title=Name und Zielpunktzahl des Spielers \u00E4ndern
+view.players.button.remove.title=Ausgew\u00E4hlte(n) Spieler(in) entfernen
+view.players.message.emptylist=Spieler(in) hinzuf\u00FCgen mit '+'.
+view.players.choose.title=Spieler(in) ausw\u00E4hlen
+view.players.dialog.heading.add=Neue(r) Spieler(in)
+view.players.dialog.heading.edit=Spieler(in) \u00E4ndern
+
 # --- 'Cards' View ---
 view.cards.heading=Karten
 view.cards.navbutton.back=Spieler
-view.cards.navbutton.back.title=Zu einem anderen Spieler wechseln
+view.cards.navbutton.back.title=Spieler wechseln
 view.cards.navbutton.forward=Verm\u00F6gen
 view.cards.navbutton.forward.title=Verm\u00F6gen ver\u00E4ndern
-view.cards.details.title=Details zur Karte
+view.cards.stats.points=Punkte
+view.cards.stats.cards=Karten
+view.cards.stats.groups=Gruppen
+view.cards.choose.title=Details zur Karte
 view.cards.button.revise.title=Korrektur des Kartenbesitzes
 view.cards.ask.clearplans=Pl\u00E4ne werden zur\u00FCckgesetzt.
+view.cards.ask.discouraged=Mit diesem Kauf k\u00F6nnen Sie durch<br/>Punkte aus Zivilisationskarten nicht<br/>mehr gewinnen.
+view.cards.ask.unaffordable=Diese Karte k\u00F6nnen Sie sich vermutlich<br/>nicht leisten.
 view.cards.msg.revising=Korrigieren ...
 view.cards.button.revisedone=Fertig
 view.cards.button.revisedone.title=Korrektur abschliessen
