--- a/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
@@ -7,15 +7,17 @@ gamesAskDelete = Partie ''{0}''\nf\u00FCr immer l\u00F6schen?
 playersDlgAddError = Kann ''{0}'' nicht hinzuf\u00FCgen.
 playersDlgEditError = Kann nicht in ''{0}'' umbenennen.
 gameCorruptNoVariant = Die Partie ''{0}''\nist defekt, weil sie auf einer nicht\nexistierenden Variante basiert.\nPartie wird gel\u00F6scht.
-cardsDiscouraged=Das Punkteziel w\u00FCrde um {0} Punkte verfehlt.
+cardsDiscouraged = Die Zielpunktzahl w\u00FCrde um {0} Punkte verfehlt.
 
 #state.detail.Owned is defined in CbLocalizedConstantsIF_de.properties
 #state.detail.Planned is defined in CbLocalizedConstantsIF_de.properties
 #state.detail.Absent is defined in CbLocalizedConstantsIF_de.properties
 #state.detail.Unaffordable is defined in CbLocalizedConstantsIF_de.properties
-state.detail.PrereqFailed=Um diese Karte erwerben zu k\u00F6nnen, m\u00FCssen Sie zun\u00E4chst die Karte ''{0}'' erwerben.
-state.detail.DiscouragedBuy=Falls Sie diese Karte erwerben, werden Sie das Punkte-Ziel mit Zivilisationskarten um {0} Punkte verfehlen.
+state.detail.PrereqFailed = Um diese Karte erwerben zu k\u00F6nnen, muss zun\u00E4chst die Karte ''{0}'' erworben werden.
+state.detail.DiscouragedBuy = Durch den Erwerb dieser Karte w\u00FCrde die Zielpunktzahl mit Zivilisationskarten um {0} Punkte verfehlt.
 
-view.funds.commodity.option={0,number} ({1,number} Pkte.)
-view.funds.commodity.option[\=1]={0,number} ({1,number} Pkt.)
-view.funds.commodity.option[one]={0,number} ({1,number} Pkt.)
+view.games.message.invalidname = Name der Partie ung\u00FCltig:\n''{0}''.\nPartie nicht angelegt.
+
+view.funds.commodity.option = {0,number} ({1,number} Pkte.)
+view.funds.commodity.option[\=1] = {0,number} ({1,number} Pkt.)
+view.funds.commodity.option[one] = {0,number} ({1,number} Pkt.)
