'Variants' view message localization

--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -51,6 +51,16 @@ view.players.choose.title=Spieler(in) ausw\u00E4hlen
 view.players.dialog.heading.add=Neue(r) Spieler(in)
 view.players.dialog.heading.edit=Spieler(in) \u00E4ndern
 
+# --- 'Variants' View ---
+view.variants.heading=Varianten
+view.variants.headerhint=Variante ausw\u00E4hlen:
+view.variants.navbutton.back=Abbrechen
+view.variants.navbutton.back.title=Zur\u00FCck zur Liste der Partien
+view.variants.button.new.title=Neue Variante anlegen
+view.variants.button.remove.title=Ausgew\u00E4hlte Variante entfernen
+view.variants.message.emptylist=Variante hinzuf\u00FCgen mit '+'.
+view.variants.choose.title=Variante ausw\u00E4hlen
+
 # --- 'Cards' View ---
 view.cards.heading=Karten
 view.cards.navbutton.back=Spieler
