After selecting the variant of a new game, go directly to the players view instead of back to the games view

--- a/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
@@ -16,7 +16,7 @@ cardsDiscouraged = Die Zielpunktzahl w\u00FCrde um {0} Punkte verfehlt.
 state.detail.PrereqFailed = Um diese Karte erwerben zu k\u00F6nnen, muss zun\u00E4chst die Karte ''{0}'' erworben werden.
 state.detail.DiscouragedBuy = Durch den Erwerb dieser Karte w\u00FCrde die Zielpunktzahl mit Zivilisationskarten um {0} Punkte verfehlt.
 
-view.games.message.invalidname = Name der Partie ung\u00FCltig:\n''{0}''.\nPartie nicht angelegt.
+view.games.message.invalidname = Partie existiert bereits:\n''{0}''.\nPartie nicht angelegt.
 
 view.funds.commodity.option = {0,number} ({1,number} Pkte.)
 view.funds.commodity.option[\=1] = {0,number} ({1,number} Pkt.)
