renamed points to score

--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -67,7 +67,7 @@ view.cards.navbutton.back=Spieler
 view.cards.navbutton.back.title=Spieler wechseln
 view.cards.navbutton.forward=Verm\u00F6gen
 view.cards.navbutton.forward.title=Verm\u00F6gen ver\u00E4ndern
-view.cards.stats.points=Punkte
+view.cards.stats.score=Punkte
 view.cards.stats.cards=Karten
 view.cards.stats.groups=Gruppen
 view.cards.choose.title=Details zur Karte
