view.funds.label.miningyield

--- a/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedConstantsIF_de.properties
@@ -88,6 +88,7 @@ view.funds.stats.commodities=Handelskarten
 view.funds.checkbox.mainswitch=Verm\u00F6gen erfassen
 view.funds.checkbox.detailed=Details erfassen
 view.funds.input.treasury=Staatsschatz
+view.funds.label.miningyield=Bergbau-Ertr\u00E4ge
 view.funds.input.bonus=Bonus
 view.funds.input.bonus.title=Beliebige Punktzahl, die zu Ihrem Verm\u00F6gen addiert wird
 view.funds.input.totalfunds=Gesamtverm\u00F6gen
