--- a/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
+++ b/src/com/tj/civ/client/resources/CbLocalizedMessagesIF_de.properties
@@ -21,3 +21,6 @@ view.games.message.invalidname = Partie existiert bereits:\n''{0}''.\nPartie nic
 view.funds.commodity.option = {0,number} ({1,number} Pkte.)
 view.funds.commodity.option[\=1] = {0,number} ({1,number} Pkt.)
 view.funds.commodity.option[one] = {0,number} ({1,number} Pkt.)
+view.funds.commodity.option.wine = {0,number} Karten
+view.funds.commodity.option.wine[\=1] = {0,number} Karte
+view.funds.commodity.option.wine[one] = {0,number} Karte
